<resources>
    <string name="app_name">My Application</string>
    <string name="description_login_cover">Wolox login cover</string>
    <string name="description_wolox_logo">Wolox logo</string>
    <string name="hint_first_name">First Name (recommended)</string>
    <string name="hint_last_name">Last Name (recommended)</string>
    <string name="terms_and_conditions">By joining you agree to our <u>Terms &amp; Conditions</u>.</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="wolox">Wolox</string>
    <string name="news_title_holder">Ali Connors</string>
    <string name="news_body_holder">I\'ll be in your neighborhood doing errands..</string>
    <string name="news_time_holder">15m</string>
</resources>
